# symfetch

./: Cargo.toml
.github/workflows/: ci.yml  comment.yml  docs.yml
src/: system_info.rs
