[package]
name = "symfetch"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.36", features = ["cargo"] }
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"
sysinfo = "0.36"
chrono = { version = "0.4", features = ["serde"] }
whoami = "2.0"
colored = "3.0"

image = { version = "0.24.9", optional = true }
rascii_art = { version = "0.4.5", optional = true }
termimage = { version = "~1.2.0", optional = true }
image_025 = { package = "image", version = "0.25", optional = true }

[features]
default = ["image"]
image = [ "dep:termimage", "dep:image_025"]
image-to-ascii = ["dep:rascii_art", "dep:image"]

[package.metadata.feature-conflict]
"image" = ["image-to-ascii"]
